plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.6'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.blueTeam'
version = '0.0.1-SNAPSHOT'

allprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    repositories {
        mavenCentral()
    }

    ext {
        set('springCloudVersion', "2023.0.1")
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-mail'
        implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
        implementation 'org.flywaydb:flyway-core'
        implementation 'org.mapstruct:mapstruct:1.5.5.Final'
        implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.3.0'
        implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.3.0'
        implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
        implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
        implementation 'com.fasterxml.jackson.core:jackson-databind'
        runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
        runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'




        compileOnly 'org.projectlombok:lombok'
        runtimeOnly 'org.postgresql:postgresql'

        annotationProcessor 'org.projectlombok:lombok'
        annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
        annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.boot:spring-boot-testcontainers'
        testImplementation 'org.springframework.security:spring-security-test'
        testImplementation 'org.testcontainers:junit-jupiter'
        testImplementation 'org.testcontainers:postgresql'

        testCompileOnly 'org.projectlombok:lombok'

        testAnnotationProcessor 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
        testAnnotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }


    tasks.named('test') {
        useJUnitPlatform()
    }
}